Fix https://bz.apache.org/bugzilla/show_bug.cgi?id=58547 Merged revision 1710753 from tomcat/trunk: Use static valueOf instead of inefficient Number constructor. Based on a patch provided by Anthony Whitford.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1710760 13f79535-47bb-0310-9956-ffa450edef68