@@ -420,7 +420,7 @@ public class StandardManager extends ManagerBase {
             if (log.isDebugEnabled())
                 log.debug("Unloading " + sessions.size() + " sessions");
             try {
-                oos.writeObject(new Integer(sessions.size()));
+                oos.writeObject(Integer.valueOf(sessions.size()));
                 Iterator<Session> elements = sessions.values().iterator();
                 while (elements.hasNext()) {
                     StandardSession session =
