@@ -470,7 +470,7 @@ class PageInfo {
                 }
             }
             try {
-                Integer k = new Integer(value.substring(0, value.length()-2));
+                Integer k = Integer.valueOf(value.substring(0, value.length()-2));
                 buffer = k.intValue() * 1024;
             } catch (NumberFormatException e) {
                 if (n == null) {
